--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,16 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+
+task helloClosure<<{
+    customEach{
+        print it
+    }
+}
+
+def customEach(closure){
+    for (i in 0..<10) {
+        closure(i)
+    }
+}
