--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,9 @@ buildscript {
     ext.kotlin_version = "1.5.20"
     repositories {
         google()
-        mavenCentral()
+
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'https://maven.google.com' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.2"
@@ -18,8 +20,9 @@ buildscript {
 allprojects {
     repositories {
         google()
-        mavenCentral()
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         jcenter() // Warning: this repository is going to shut down soon
+        maven { url 'https://maven.google.com' }
     }
 }
 
