--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,13 +34,20 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:2.0.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
+    //使用kotlin的依赖
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.71"
+    implementation("com.squareup.okhttp3:okhttp:4.9.3")
+
+//在Android中使用协程需要添加此依赖
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
 
     implementation 'com.squareup.retrofit2:retrofit:2.8.0.'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
