--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.5.30-M1'
     ext.kotlin_version = "1.5.20"
     repositories {
-        google()
+        maven {url 'https://maven.aliyun.com/repository/google/'}
+        maven {url 'https://maven.aliyun.com/repository/public/'}
+        maven {url 'https://maven.aliyun.com/repository/gradle-plugin/'}
 
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-        maven { url 'https://maven.google.com' }
+        google()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.2"
+        classpath "com.android.tools.build:gradle:4.0.+"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -19,10 +19,11 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {url 'https://maven.aliyun.com/repository/google/'}
+        maven {url 'https://maven.aliyun.com/repository/public/'}
+        maven {url 'https://maven.aliyun.com/repository/gradle-plugin/'}
+
         google()
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-        jcenter() // Warning: this repository is going to shut down soon
-        maven { url 'https://maven.google.com' }
     }
 }
 
