--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.kotlin_version = '1.5.30-M1'
     ext.kotlin_version = "1.5.20"
     repositories {
         maven {url 'https://maven.aliyun.com/repository/google/'}
