--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,16 +33,19 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+    implementation 'com.android.support:design:26.0.0-alpha1'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+// ViewModel and LiveData
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.0.0"
 
-    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation project(path: ':library')
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
-    //noinspection GradleCompatible
-    implementation 'com.android.support:design:28.0.0'
     //使用kotlin的依赖
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.71"
     implementation("com.squareup.okhttp3:okhttp:4.9.3")
