--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         maven {url 'https://maven.aliyun.com/repository/public/'}
         maven {url 'https://maven.aliyun.com/repository/gradle-plugin/'}
 
-        google()
+//        google()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.+"
@@ -24,7 +24,7 @@ allprojects {
         maven {url 'https://maven.aliyun.com/repository/public/'}
         maven {url 'https://maven.aliyun.com/repository/gradle-plugin/'}
 
-        google()
+//        google()
     }
 }
 
