--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.8.0.'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
+    implementation 'com.byc:ImageWatcher:1.1.0'
+
 }
