--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 rootProject.name = "Kotlin_dem"
 include ':app'
-//include ':test'
-//include ':kotlin_sample'
+include ':test'
+include ':kotlin_sample'
 include ':library'
-//include ':redpoint'
+include ':redpoint'
 include ':mytoast'
