--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,9 @@ dependencies {
     implementation("com.squareup.okhttp3:okhttp:4.9.3")
 
 //在Android中使用协程需要添加此依赖
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0")
+//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
 
     implementation 'com.squareup.retrofit2:retrofit:2.8.0.'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
