--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,15 @@ plugins {
 }
 
 android {
-    compileSdkVersion 31
-    buildToolsVersion "30.0.3"
-
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
+    viewBinding {
+        enabled = true
+    }
     defaultConfig {
         applicationId "com.lll.kotlin_dem"
         minSdkVersion 23
-        targetSdkVersion 30
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
 
@@ -34,28 +36,23 @@ android {
 
 dependencies {
     compile  fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
-    implementation 'com.android.support:design:26.0.0-alpha1'
-    implementation 'com.google.android.material:material:1.2.0-alpha01'
-
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation project(path: ':library')
-
-
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
-
     //使用kotlin的依赖
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.71"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.10"
     implementation("com.squareup.okhttp3:okhttp:4.9.3")
 
 //在Android中使用协程需要添加此依赖
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0")
-//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.8.0.'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
+//    implementation 'com.squareup.retrofit2:retrofit:2.8.0.'
+//    implementation 'com.squareup.retrofit2:converter-gson:2.8.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.byc:ImageWatcher:1.1.0'
 
 }
