--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,19 +4,19 @@ plugins {
 }
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion "28.0.3"
+    compileSdkVersion 31
+    buildToolsVersion "31.0.0"
     viewBinding {
         enabled = true
     }
     defaultConfig {
         applicationId "com.lll.kotlin_dem"
         minSdkVersion 23
-        targetSdkVersion 28
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
 
     buildTypes {
@@ -35,24 +35,7 @@ android {
 }
 
 dependencies {
-    compile  fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation  fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation project(path: ':library')
-    implementation 'androidx.viewpager2:viewpager2:1.0.0'
-    //使用kotlin的依赖
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.10"
-    implementation("com.squareup.okhttp3:okhttp:4.9.3")
-
-//在Android中使用协程需要添加此依赖
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0")
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0")
-
-//    implementation 'com.squareup.retrofit2:retrofit:2.8.0.'
-//    implementation 'com.squareup.retrofit2:converter-gson:2.8.0'
-
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    implementation 'com.byc:ImageWatcher:1.1.0'
-
 }
