--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     implementation  fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation project(path: ':library')
+    implementation 'com.google.android.material:material:1.5.0'
 }
