--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,8 @@
 rootProject.name = "Kotlin_dem"
 include ':MMoto'
-
+include ':test'
 include ':kotlin_sample'
 include ':library'
-include ':redpoint'
-include ':mytoast'
-include ':testoverlaypermission'
+//include ':redpoint'
+//include ':mytoast'
+//include ':testoverlaypermission'
