--- a/MMoto/src/main/AndroidManifest.xml
+++ b/MMoto/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         <activity
             android:name=".ui.KoubeiListActivity"
             android:exported="false" />
-        <activity android:name=".ui.MainActivity">
+        <activity android:name=".ui.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
