--- a/MMoto/build.gradle
+++ b/MMoto/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -39,10 +40,7 @@ dependencies {
 
     implementation project(path: ':library')
     implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation ("com.github.bumptech.glide:glide:4.8.0") {
-        exclude group: "com.android.support"
-    }
-//    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    kapt 'com.github.bumptech.glide:compiler:4.8.0'
 }
