--- a/MMoto/build.gradle
+++ b/MMoto/build.gradle
@@ -6,13 +6,13 @@ plugins {
 
 android {
     compileSdkVersion 31
-    buildToolsVersion "31.0.0"
+    buildToolsVersion '30.0.3'
     viewBinding {
         enabled = true
     }
     defaultConfig {
         applicationId "com.lll.kotlin_dem"
-        minSdkVersion 23
+        minSdkVersion 29
         targetSdkVersion 31
         versionCode 1
         versionName "1.0"
