--- a/MMoto/build.gradle
+++ b/MMoto/build.gradle
@@ -12,7 +12,7 @@ android {
     }
     defaultConfig {
         applicationId "com.lll.kotlin_dem"
-        minSdkVersion 29
+        minSdkVersion 23
         targetSdkVersion 31
         versionCode 1
         versionName "1.0"
@@ -43,4 +43,9 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     kapt 'com.github.bumptech.glide:compiler:4.8.0'
+
+    def lifecycle_version = "2.0.0"
+// ViewModel and LiveData
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+
 }
