--- a/MMoto/src/main/AndroidManifest.xml
+++ b/MMoto/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".MotoApp"
         android:supportsRtl="true"
         android:theme="@style/Theme.Kotlin_dem"
         android:usesCleartextTraffic="true">
