--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,10 @@
 rootProject.name = "Kotlin_dem"
 //include ':MMoto'
 //include ':test'
-//include ':kotlin_sample'
+include ':kotlin_sample'
 //include ':library'
 //include ':redpoint'
 //include ':mytoast'
 //include ':testoverlaypermission'
-include ':testshimmer'
-include ':shimmer'
+//include ':testshimmer'
+//include ':shimmer'
